Adjust responsiveness for sidebar+main layout (snap to mobile mode at sm breakpoint instead of xs). Fix the sidebar toggler so it stops collapsing the facet nav section when it is still on the side. Closes TD-1170 & TD-1172.

--- a/app/assets/stylesheets/trln_argon/trln_argon_shared.scss
+++ b/app/assets/stylesheets/trln_argon/trln_argon_shared.scss
@@ -531,6 +531,23 @@ body.blacklight-trln-show {
     margin-top: 15px;
 }
 
+/* Workaround for BL core's hard-coded facet toggle breakpoint.       */
+/* This is a stopgap solution for Blacklight issue #2733 per TD-1172  */
+/* and should be replaced w/a BL-friendly approach once resolved.     */
+/* https://github.com/projectblacklight/blacklight/issues/2733        */
+
+.facets-toggleable-md {
+  @include media-breakpoint-up(md) {
+    .facets-collapse {
+      display: block !important;
+      width: 100%;
+    }
+
+    .navbar-toggler {
+      display: none;
+    }
+  }
+}
 
 
 /* =============== */
